# nbi-mcp-agent

./: .gitignore  LICENSE  README.md  extension.json  pyproject.toml  setup.py
nbi_mcp_agent/: __init__.py  extension.py  mcp_server.py
